Added manual weighting, and sketch for box_covering

--- a/source/1_Netzschleuder_statistics.ipynb
+++ b/source/1_Netzschleuder_statistics.ipynb
@@ -1094,11 +1094,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
-    "manual_weighting_dict = {\n",
+    "manual_graph_weighting_dict = {\n",
     "    \"chess\": GraphWeighting.UNWEIGHTED,\n",
     "    \"digg_votes\": GraphWeighting.UNWEIGHTED,\n",
     "    \"edit_wikibooks\": GraphWeighting.UNWEIGHTED,  # ?????\n",
@@ -1143,6 +1143,56 @@
     "    \"sp_high_school/proximity\" : GraphWeighting.WEIGHTED,\n",
     "    \"sp_high_school/survey\" : GraphWeighting.UNWEIGHTED,\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "manual_dataset_weighting_dict = {\n",
+    "    \"chess\": GraphWeighting.UNWEIGHTED,\n",
+    "    \"digg_votes\": GraphWeighting.UNWEIGHTED,\n",
+    "    \"edit_wikibooks\": GraphWeighting.UNWEIGHTED,  # ?????\n",
+    "    \"edit_wikinews\": GraphWeighting.UNWEIGHTED,  # ????\n",
+    "    \"edit_wikiquote\": GraphWeighting.UNWEIGHTED,  # ????\n",
+    "    \"edit_wiktionary\": GraphWeighting.UNWEIGHTED,  # ????\n",
+    "    \"elec\": GraphWeighting.UNWEIGHTED,\n",
+    "    \"facebook_wall\": GraphWeighting.UNWEIGHTED,\n",
+    "    \"fediverse\": GraphWeighting.UNWEIGHTED,\n",
+    "    \"human_brains\": GraphWeighting.WEIGHTED,\n",
+    "    \"new_guinea_tribes\": GraphWeighting.UNWEIGHTED,\n",
+    "    \"pokec\": GraphWeighting.UNWEIGHTED,\n",
+    "    \"slashdot_zoo\": GraphWeighting.UNWEIGHTED,\n",
+    "    \"social_location\": GraphWeighting.UNWEIGHTED,\n",
+    "    \"tree-of-life\" : GraphWeighting.UNWEIGHTED,\n",
+    "    \"us_congress\" : GraphWeighting.UNWEIGHTED,\n",
+    "    \"wiki_rfa\" : GraphWeighting.UNWEIGHTED,\n",
+    "    \"wiki_users\" : GraphWeighting.UNWEIGHTED,\n",
+    "    \"wikiconflict\" : GraphWeighting.WEIGHTED,\n",
+    "    \"bookcrossing\" : GraphWeighting.UNWEIGHTED,\n",
+    "    \"copenhagen\" : GraphWeighting.BOTH,\n",
+    "    \"dblp_simplices\" : GraphWeighting.BOTH,\n",
+    "    \"mag_geology_coauthor\" : GraphWeighting.BOTH,\n",
+    "    \"mag_history_coauthor\" : GraphWeighting.BOTH,\n",
+    "    \"sp_baboons\" : GraphWeighting.BOTH,\n",
+    "    \"sp_colocation\" : GraphWeighting.UNWEIGHTED,\n",
+    "    \"sp_high_school\" : GraphWeighting.BOTH,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def manual_weight_mapping(entity, dict):\n",
+    "    if (entity['name'] in dict):\n",
+    "        entity['is_weighted'] = dict[entity['name']]\n",
+    "    return entity\n",
+    "    "
    ]
   },
   {
@@ -2325,113 +2375,276 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 306,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "24"
-      ]
-     },
-     "execution_count": 276,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(ns_dataset[ns_dataset['community_label'].apply(lambda x: len(x) > 1)])"
+    "manual_community_label_dict = {\n",
+    "    'at_migrations' : 'Social',\n",
+    "    'dnc' : 'Social',\n",
+    "    'email_company' : 'Social',\n",
+    "    'email_enron' : 'Social',\n",
+    "    'email_eu' : 'Social',\n",
+    "    'foodweb_baywet' : 'Food web',\n",
+    "    'foodweb_little_rock' : 'Food web',\n",
+    "    'fresh_webs' : 'Food web',\n",
+    "    'lkml_reply' : 'Technological',\n",
+    "    'lkml_thread' : 'Technological',\n",
+    "    'messal_shale' : 'Biological',\n",
+    "    'nematode_mammal' : 'Biological',\n",
+    "    'plant_pol_kato' : 'Biological',\n",
+    "    'plant_pol_robertson' : 'Biological',\n",
+    "    'plant_pol_vazquez' : 'Biological',\n",
+    "    'power' : 'Power grid',\n",
+    "    'slashdot_threads' : 'Social',\n",
+    "    'soc_net_comms' : 'Social',\n",
+    "    'un_migrations' : 'Economic',\n",
+    "    'uni_email' : 'Social',\n",
+    "    'us_agencies' : 'Economic',\n",
+    "    'us_congress' : 'Economic',\n",
+    "    'wiki_talk' : 'Social',\n",
+    "    'wikipedia-en-talk' : 'Social'\n",
+    "}\n",
+    "\n",
+    "def manual_community_label_map(ns_dataset, name_to_label_dict):\n",
+    "    df = ns_dataset.copy()\n",
+    "\n",
+    "    def get_mapped_label(row):\n",
+    "        name = row['name']\n",
+    "        community_labels = row['community_label']\n",
+    "\n",
+    "        if name in name_to_label_dict:\n",
+    "            return name_to_label_dict[name]\n",
+    "        else:\n",
+    "            if len(community_labels) > 0:\n",
+    "              return next(iter(community_labels))\n",
+    "            else:\n",
+    "              return None\n",
+    "\n",
+    "    df['community_label'] = df.apply(get_mapped_label, axis=1)\n",
+    "\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 310,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_labels(ns_dataset):\n",
+    "    label_counts = ns_dataset['community_label'].value_counts()\n",
+    "\n",
+    "    count_df = label_counts.reset_index()\n",
+    "    count_df.columns = ['Label', 'Count']\n",
+    "\n",
+    "    print(count_df)\n",
+    "    # return count_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>bibtex</th>\n",
-       "      <th>citation</th>\n",
-       "      <th>description</th>\n",
-       "      <th>nets</th>\n",
-       "      <th>restricted</th>\n",
-       "      <th>tags</th>\n",
-       "      <th>title</th>\n",
-       "      <th>url</th>\n",
-       "      <th>name</th>\n",
-       "      <th>community_label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>222</th>\n",
-       "      <td>[@misc{jaewon_defining_2012,\\n  doi          =...</td>\n",
-       "      <td>[[J. Yang and J. Leskovec. \"Defining and Evalu...</td>\n",
-       "      <td>Snapshots of LiveJournal, Friendster, Orkut, a...</td>\n",
-       "      <td>[friendster, livejournal, orkut, youtube, dblp...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>[Online, Social, Collaboration, Informational,...</td>\n",
-       "      <td>Networks with group metadata</td>\n",
-       "      <td>https://snap.stanford.edu/data/com-Friendster....</td>\n",
-       "      <td>soc_net_comms</td>\n",
-       "      <td>{Social, Academic}</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                                bibtex  \\\n",
-       "222  [@misc{jaewon_defining_2012,\\n  doi          =...   \n",
-       "\n",
-       "                                              citation  \\\n",
-       "222  [[J. Yang and J. Leskovec. \"Defining and Evalu...   \n",
-       "\n",
-       "                                           description  \\\n",
-       "222  Snapshots of LiveJournal, Friendster, Orkut, a...   \n",
-       "\n",
-       "                                                  nets  restricted  \\\n",
-       "222  [friendster, livejournal, orkut, youtube, dblp...       False   \n",
-       "\n",
-       "                                                  tags  \\\n",
-       "222  [Online, Social, Collaboration, Informational,...   \n",
-       "\n",
-       "                            title  \\\n",
-       "222  Networks with group metadata   \n",
-       "\n",
-       "                                                   url           name  \\\n",
-       "222  https://snap.stanford.edu/data/com-Friendster....  soc_net_comms   \n",
-       "\n",
-       "        community_label  \n",
-       "222  {Social, Academic}  "
+       "13           at_migrations\n",
+       "73                     dnc\n",
+       "88           email_company\n",
+       "89             email_enron\n",
+       "90                email_eu\n",
+       "114         foodweb_baywet\n",
+       "115    foodweb_little_rock\n",
+       "121             fresh_webs\n",
+       "162             lkml_reply\n",
+       "163            lkml_thread\n",
+       "173           messal_shale\n",
+       "184        nematode_mammal\n",
+       "198         plant_pol_kato\n",
+       "199    plant_pol_robertson\n",
+       "200      plant_pol_vazquez\n",
+       "204                  power\n",
+       "220       slashdot_threads\n",
+       "222          soc_net_comms\n",
+       "255          un_migrations\n",
+       "256              uni_email\n",
+       "259            us_agencies\n",
+       "261            us_congress\n",
+       "271              wiki_talk\n",
+       "274      wikipedia-en-talk\n",
+       "Name: name, dtype: object"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ns_dataset[ns_dataset['name'].apply(lambda x: x == 'soc_net_comms')]    "
+    "ns_dataset[ns_dataset['community_label'].apply(lambda x: len(x) > 1)]['name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ns_dataset = manual_community_label_map(ns_dataset, manual_community_label_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 311,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Label  Count\n",
+      "0         Social    143\n",
+      "1       Academic     52\n",
+      "2     Biological     33\n",
+      "3       Economic     26\n",
+      "4  Technological     15\n",
+      "5      Transport     13\n",
+      "6       Food web      3\n",
+      "7     Power grid      1\n"
+     ]
+    }
+   ],
+   "source": [
+    "count_labels(ns_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ns_dataset[ns_dataset.apply(lambda x: 'Social' in x['community_label'] and 'Weighted' in x['tags'], axis=1)].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "286"
+      ]
+     },
+     "execution_count": 291,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ns_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "163735"
+      ]
+     },
+     "execution_count": 292,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ns_graph_info_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 335,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "is_weighted\n",
+       "GraphWeighting.UNWEIGHTED    208\n",
+       "GraphWeighting.WEIGHTED       72\n",
+       "GraphWeighting.BOTH            6\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 335,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ns_dataset_weighting = ns_dataset.copy()\n",
+    "\n",
+    "ns_dataset_weighting[\"is_weighted\"] = ns_dataset_weighting.apply(is_weighted, axis = 1)\n",
+    "ns_dataset_weighting = ns_dataset_weighting.apply(manual_weight_mapping, args=(manual_dataset_weighting_dict,), axis=1)\n",
+    "ns_dataset_weighting['is_weighted'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 351,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_community_weighting_types(dataset):\n",
+    "    grouped = dataset.groupby('community_label')['is_weighted'].value_counts()\n",
+    "\n",
+    "    count_df = grouped.unstack(fill_value=0)\n",
+    "    count_df = count_df.reset_index()\n",
+    "\n",
+    "    return count_df\n",
+    "\n",
+    "\n",
+    "def count_community_timestamp_tag(dataset):\n",
+    "    def has_timestamps(tag_list):\n",
+    "        if isinstance(tag_list, list):\n",
+    "            return \"Timestamps\" in tag_list\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    df_with_timestamps = dataset[dataset['tags'].apply(has_timestamps)]\n",
+    "\n",
+    "    label_counts = df_with_timestamps.groupby('community_label').size()\n",
+    "\n",
+    "    count_df = label_counts.reset_index()\n",
+    "    count_df.columns = ['Label', 'Count']\n",
+    "\n",
+    "    return count_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 343,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_community_weighting_types(ns_dataset_weighting).to_csv('community_weighting_types.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_community_timestamp_tag(ns_dataset).to_csv('community_timestamp_tag.csv')"
    ]
   }
  ],
