--- a/source/2_Analyze_Social_Network.ipynb
+++ b/source/2_Analyze_Social_Network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,11 +24,119 @@
    "source": [
     "twittet_graph = gt.collection.ns[\"twitter_2009\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twittet_graph.edge_properties[\"weight\"] = twittet_graph.new_edge_property(\"int\", val=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twittet_graph.ep.weight[twittet_graph.edges().next()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_span_tree = gt.min_spanning_tree(twittet_graph, twittet_graph.ep.weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mst_graph = gt.GraphView(twittet_graph, efilt=max_span_tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Graph.num_edges of <GraphView object, directed, with 52579682 vertices and 52550149 edges, 1 internal vertex property, 1 internal edge property, 5 internal graph properties, edges filtered by (<EdgePropertyMap object with value type 'bool', for Graph 0x7fa4a7f53340, at 0x7fa4a7f52620>, False), vertices filtered by (<VertexPropertyMap object with value type 'bool', for Graph 0x7fa4a7f53340, at 0x7fa4a83769e0>, False), at 0x7fa4a7f53340>>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mst_graph.num_edges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lbs, nbs = box_covering(twittet_graph, distances=distances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "endDate = datetime.datetime.now()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Graph object, directed, with 52579682 vertices and 1963263821 edges, 1 internal vertex property, 5 internal graph properties, at 0x7f1095e16f80>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twittet_graph"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   }
  },
  "nbformat": 4,
